--- a/mini_project_file_1_old.ipynb
+++ b/mini_project_file_1_old.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c1d33684",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3f192bca",
    "metadata": {},
    "outputs": [
@@ -62,6 +62,50 @@
     "most_exp_p=mean_price.max() #finding the company that has on average the most expensive laptop\n",
     "most_exp_n=mean_price.idxmax() #finding the name of the company \n",
     "print(f\"The company that has on average the most expensive laptop is {most_exp_n} and the average is {most_exp_p}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "dd5fba18",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['macOS' 'No OS' 'Windows 10' 'Mac OS X' 'Linux' 'Android' 'Windows 10 S'\n",
+      " 'Chrome OS' 'Windows 7']\n"
+     ]
+    }
+   ],
+   "source": [
+    "opsys_name=df[\"OpSys\"].unique() \n",
+    "print(opsys_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b816d99",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['macOS', 'No OS', 'Windows 10', 'Linux', 'Android', 'Chrome OS',\n",
+       "       'Windows 7'], dtype=object)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "opsys_map={\"Mac OS X\":'macOS','Windows 10 S':'Windows 10' }\n",
+    "df[\"uniform_OpSys\"]= df[\"OpSys\"].replace(opsys_map)\n",
+    "df[\"uniform_OpSys\"].unique() # finding the unique values"
    ]
   }
  ],
