unique opsys updated

--- a/mini_project_file_1.ipynb
+++ b/mini_project_file_1.ipynb
@@ -1390,63 +1390,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "18427115",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "GPU_Company",
-         "rawType": "object",
-         "type": "string"
-        }
-       ],
-       "ref": "aafb564e-804a-426c-b5be-a701b5416ad1",
-       "rows": [
-        [
-         "0",
-         "Intel"
-        ],
-        [
-         "3",
-         "AMD"
-        ],
-        [
-         "8",
-         "Nvidia"
-        ],
-        [
-         "1191",
-         "ARM"
-        ]
-       ],
-       "shape": {
-        "columns": 1,
-        "rows": 4
-       }
-      },
-      "text/plain": [
-       "0        Intel\n",
-       "3          AMD\n",
-       "8       Nvidia\n",
-       "1191       ARM\n",
-       "Name: GPU_Company, dtype: object"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['macOS' 'No OS' 'Windows 10' 'Mac OS X' 'Linux' 'Android' 'Windows 10 S'\n",
+      " 'Chrome OS' 'Windows 7']\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "opsys_name=df[\"OpSys\"].unique() \n",
+    "print(opsys_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a27bb24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opsys_map={\"Mac OS X\":'macOS','Windows 10 S':'Windows 10' }\n",
+    "df[\"uniform_OpSys\"]= df[\"OpSys\"].replace(opsys_map)\n",
+    "df[\"uniform_OpSys\"].unique() # finding the unique values"
+   ]
   }
  ],
  "metadata": {
