create storge type coulmn

--- a/mini_project_file_1.ipynb
+++ b/mini_project_file_1.ipynb
@@ -1560,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "ffed4933",
    "metadata": {},
    "outputs": [
@@ -1605,7 +1605,11 @@
    "id": "a2a74631",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df[\"Storage type\"] = df[\"Memory\"].str.split().str[1:].str.join(\" \") \n",
+    "# create a new colum, create a list from the string for every row, remove the storage capacity and than join it back to string\n",
+    "   "
+   ]
   }
  ],
  "metadata": {
