corrections of the code

--- a/mini_project_file_1.ipynb
+++ b/mini_project_file_1.ipynb
@@ -1604,10 +1604,169 @@
    "execution_count": null,
    "id": "a2a74631",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Storage type",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "228c05e8-49e6-446f-b969-48044321d335",
+       "rows": [
+        [
+         "0",
+         "SSD"
+        ],
+        [
+         "1",
+         "Flash Storage"
+        ],
+        [
+         "2",
+         "SSD"
+        ],
+        [
+         "3",
+         "SSD"
+        ],
+        [
+         "4",
+         "SSD"
+        ],
+        [
+         "5",
+         "HDD"
+        ],
+        [
+         "6",
+         "Flash Storage"
+        ],
+        [
+         "7",
+         "Flash Storage"
+        ],
+        [
+         "8",
+         "SSD"
+        ],
+        [
+         "9",
+         "SSD"
+        ],
+        [
+         "10",
+         "HDD"
+        ],
+        [
+         "11",
+         "HDD"
+        ],
+        [
+         "12",
+         "SSD"
+        ],
+        [
+         "13",
+         "SSD"
+        ],
+        [
+         "14",
+         "SSD"
+        ],
+        [
+         "15",
+         "SSD"
+        ],
+        [
+         "16",
+         "SSD"
+        ],
+        [
+         "17",
+         "SSD"
+        ],
+        [
+         "18",
+         "HDD"
+        ],
+        [
+         "19",
+         "SSD"
+        ],
+        [
+         "20",
+         "Flash Storage"
+        ],
+        [
+         "21",
+         "SSD +   HDD"
+        ],
+        [
+         "22",
+         "HDD"
+        ],
+        [
+         "23",
+         "SSD"
+        ],
+        [
+         "24",
+         "SSD"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 25
+       }
+      },
+      "text/plain": [
+       "0               SSD\n",
+       "1     Flash Storage\n",
+       "2               SSD\n",
+       "3               SSD\n",
+       "4               SSD\n",
+       "5               HDD\n",
+       "6     Flash Storage\n",
+       "7     Flash Storage\n",
+       "8               SSD\n",
+       "9               SSD\n",
+       "10              HDD\n",
+       "11              HDD\n",
+       "12              SSD\n",
+       "13              SSD\n",
+       "14              SSD\n",
+       "15              SSD\n",
+       "16              SSD\n",
+       "17              SSD\n",
+       "18              HDD\n",
+       "19              SSD\n",
+       "20    Flash Storage\n",
+       "21      SSD +   HDD\n",
+       "22              HDD\n",
+       "23              SSD\n",
+       "24              SSD\n",
+       "Name: Storage type, dtype: object"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df[\"Storage type\"] = df[\"Memory\"].str.split().str[1:].str.join(\" \") \n",
-    "# create a new colum, create a list from the string for every row, remove the storage capacity and than join it back to string\n",
+    "df[\"Storage type\"] = df[\"Memory\"].str.replace( r\"\\d+\\s?(GB|TB)\", \"\", regex=True).str.strip()\n",
+    "# This code creates a new column with the titel storge type. \n",
+    "# This function can detect storage capacity that combains from numbers and letters that somtmes has space between them and replacd it with empty string.\n",
+    "df[\"Storage type\"].head(25) #check the previous code\n",
     "   "
    ]
   }
