--- a/mini_project_file_1.ipynb
+++ b/mini_project_file_1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "1a82fe2a",
    "metadata": {},
    "outputs": [
@@ -1329,6 +1329,7 @@
    ],
    "source": [
     "df=pd.read_csv(r\"C:\\Users\\Lenovo\\Documents\\פייתון תרגולים\\mini_project_1\\laptop_price - dataset.csv\")\n",
+    "# import the dataset\n",
     "df"
    ]
   },
@@ -1362,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "id": "c0276767",
    "metadata": {},
    "outputs": [
@@ -1370,18 +1371,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GPU_Company\n",
-      "AMD        778.026552\n",
-      "ARM        659.000000\n",
-      "Intel     1020.367713\n",
-      "Nvidia    1496.745101\n",
+      "Company\n",
+      "Acer          633.464455\n",
+      "Apple        1564.198571\n",
+      "Asus         1123.829737\n",
+      "Chuwi         314.296667\n",
+      "Dell         1199.225120\n",
+      "Fujitsu       729.000000\n",
+      "Google       1677.666667\n",
+      "HP           1080.314664\n",
+      "Huawei       1424.000000\n",
+      "LG           2099.000000\n",
+      "Lenovo       1093.862215\n",
+      "MSI          1728.908148\n",
+      "Mediacom      295.000000\n",
+      "Microsoft    1612.308333\n",
+      "Razer        3346.142857\n",
+      "Samsung      1413.444444\n",
+      "Toshiba      1267.812500\n",
+      "Vero          217.425000\n",
+      "Xiaomi       1133.462500\n",
       "Name: Price (Euro), dtype: float64\n",
-      "The company that has on average the most expensive laptop is Nvidia and the average is 1496.745101010101\n"
+      "The company that has on average the most expensive laptop is Razer and the average is 3346.1428571428573\n"
      ]
     }
    ],
    "source": [
-    "mean_price=df.groupby('GPU_Company')['Price (Euro)'].mean() #finding the mean of each company\n",
+    "mean_price=df.groupby('Company')['Price (Euro)'].mean() #finding the mean of each company\n",
     "print(mean_price) #The mean prices of the company\n",
     "most_exp_p=mean_price.max() #finding the company that has on average the most expensive laptop\n",
     "most_exp_n=mean_price.idxmax() #finding the name of the company \n",
@@ -1410,26 +1426,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "6a27bb24",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array(['macOS', 'No OS', 'Windows 10', 'Linux', 'Android', 'Chrome OS',\n",
-       "       'Windows 7'], dtype=object)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The different types of operating systems are: macOS, No OS, Windows 10, Linux, Android, Chrome OS, Windows 7\n"
+     ]
     }
    ],
    "source": [
     "opsys_map={\"Mac OS X\":'macOS','Windows 10 S':'Windows 10' } # if Windows 7 and 10 are diffrent \n",
     "df[\"uniform_OpSys\"]= df[\"OpSys\"].replace(opsys_map)\n",
-    "df[\"uniform_OpSys\"].unique() # finding the unique value"
+    "o_systems=df[\"uniform_OpSys\"].unique() # finding the unique value\n",
+    "print(\"The different types of operating systems are:\",\", \".join(o_systems.astype(str))) #convert it to string"
    ]
   },
   {
@@ -1601,7 +1614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "a2a74631",
    "metadata": {},
    "outputs": [
@@ -1620,7 +1633,7 @@
          "type": "string"
         }
        ],
-       "ref": "228c05e8-49e6-446f-b969-48044321d335",
+       "ref": "952f77ff-02ba-4d89-aa4b-7b6b863d1fb2",
        "rows": [
         [
          "0",
@@ -1757,13 +1770,13 @@
        "Name: Storage type, dtype: object"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[\"Storage type\"] = df[\"Memory\"].str.replace( r\"\\d+\\s?(GB|TB)\", \"\", regex=True).str.strip()\n",
+    "df[\"Storage type\"] = ( df[\"Memory\"].str.replace(r\"\\d+(\\.\\d+)?\\s?(GB|TB|MB)\", \"\", regex=True).str.strip())\n",
     "# This code creates a new column with the titel storge type. \n",
     "# This function can detect storage capacity that combains from numbers and letters that somtmes has space between them and replacd it with empty string.\n",
     "df[\"Storage type\"].head(25) #check the previous code\n",
